@startuml

class Employee{
    id : Long
    firstName : String
    lastName : String
    salary : int
}

class Shift{
    id : Long
    leader : ShiftLeader
    workers : List<ShiftWorker>
    beginn : int
    end : int
}

class ShiftLeader{
    extraSal : int
}

class ShiftWorker{
    workStation : Workstation
}

class Workstation{
    id : Long
    nameOfStation : String
}

Shift "1" -- "*" ShiftLeader : < is Leader of
Shift "1" -- "*" ShiftWorker : > has

ShiftLeader --|> Employee
ShiftWorker --|> Employee

ShiftWorker "1" -- "*" Workstation : > works at


@enduml